--- a/js/plugins/chartJs/samples/charts/pie.html
+++ b/js/plugins/chartJs/samples/charts/pie.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Pie Chart</title>
-	<script src="../../dist/Chart.min.js"></script>
+	<script src="../../dists/Chart.min.js"></script>
 	<script src="../utils.js"></script>
 </head>
 
